# url_to_book

./: README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml
.serena/: project.yml
docs/: api.rst  conf.py  index.rst  quickstart.rst
tests/: test_extractor.py  test_image_handler.py  test_pdf_generator.py
url_to_book/: __init__.py  api.py  async_api.py  cli.py  extractor.py  image_handler.py
url_to_book/renderers/: epub_renderer.py
url_to_pdf/: cli.py  extractor.py  image_handler.py  pdf_generator.py
url_to_pdf/renderers/: fb2_renderer.py  pdf_renderer.py
